@@ -8,6 +8,7 @@ ggtern 2.0.2
 * Fixed bug in how the order of axis label preferences ie, Tarrow << yarrow << T << y << default etc...
 * Created geom_ternary_crosshar new geometry
 * Added some custom legend keys for new geometries
+* Fixed bug with the hshift and vshift theme elements, reduced them to numeric candidates
 
 ggtern 2.0.1
 ----------------------------------------------------------------
